# 0x0-Gen

./: .eslintrc.cjs  .gitignore  CONTRIBUTING.md  QUICKSTART.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.base.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
apps/decoder-ui/: index.html  package.json  vite.config.ts
apps/decoder-ui/src/: app.tsx  main.ts
apps/desktop/: index.html  package.json
apps/desktop/src/: app.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/hub/: index.html  package.json  tsconfig.json  vite.config.ts
apps/hub/src/: app.tsx  main.ts
apps/intruder-ui/: index.html  package.json  vite.config.ts
apps/intruder-ui/src/: app.tsx  main.ts
apps/mapper-ui/: index.html  package.json  vite.config.ts
apps/mapper-ui/src/: app.tsx  main.tsx
apps/proxy-ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/recon-ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/repeater-ui/: index.html  package.json  vite.config.ts  vitest.config.ts
samples/: README.md  amass-example.json  ffuf-example.json  httpx-example.json  nmap-example.xml  nuclei-example.json  shodan-example.json  subfinder-example.txt  wayback-example.txt
scripts/: test-integration-with-samples.sh  test-integration.sh
services/decoder/: package.json
services/gateway/: package.json  tsconfig.json
services/intruder/: package.json  tsconfig.json
services/proxy/: package.json
services/recon/: package.json  tsconfig.json
services/replay/: package.json
(+245 files in other folders)
