[package]
name = "desktop"
version = "0.1.0"
description = "0x0-Gen desktop runtime"
authors = ["0x0-Gen"]
license = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
